[#2215] Make secrets array mandatory
The supported credentials types now require the secrets array to be
non-empty.

Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>