@@ -23,7 +23,6 @@ import java.security.cert.CertificateException;
 import java.security.cert.CertificateFactory;
 import java.security.cert.X509Certificate;
 import java.time.Instant;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -322,10 +321,7 @@ abstract class CredentialsApiTests extends DeviceRegistryTestBase {
         final var secret2 = Credentials.createPasswordSecret("hono-password",
                 OptionalInt.of(IntegrationTestSupport.MAX_BCRYPT_COST_FACTOR));
 
-        final var credential = new PasswordCredential(authId);
-        credential.setSecrets(Arrays.asList(secret1, secret2));
-
-        return credential;
+        return new PasswordCredential(authId, List.of(secret1, secret2));
     }
 
     private static void assertStandardProperties(
